--- a/pythonProject1/templates/perfil.html
+++ b/pythonProject1/templates/perfil.html
@@ -5,8 +5,12 @@
     <title>PerfilFakePinterest</title>
 </head>
 <body>
-    <h1>
-        Usuario X
-    </h1>
+<h1>
+    Perfil do usuario: {{ user }}
+</h1>
+
+<!--parra o url for com o nome da função que voce quer mandar-->
+<a href="{{ url_for('homepage') }}">Sair</a>
+
 </body>
 </html>
