--- a/pythonProject1/templates/homepage.html
+++ b/pythonProject1/templates/homepage.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>FakePinterest</title>
+    <title>
+        {% block titulo %}
+        FakePinterest
+        {% endblock%}
+    </title>
 </head>
+{% block body %}
 <body>
-    <h1>FakePinterest - meu primeiro site no ar </h1>
+    <h1>
+        FakePinterest - meu primeiro site no ar
+    </h1>
     <p>
        agora vamos sei la qualquer coisa manos
     </p>
 </body>
+{% endblock %}
 </html>
