Final - Começo das coisa de Login

--- a/pythonProject1/fakepinterest/templates/homepage.html
+++ b/pythonProject1/fakepinterest/templates/homepage.html
@@ -13,9 +13,15 @@
     <h1>
         FakePinterest - meu primeiro site no ar
     </h1>
+    
     <p>
        agora vamos sei la qualquer coisa manos
     </p>
+
+    <form method="POST">
+        
+    </form>
+
 </body>
 {% endblock %}
 </html>
